@@ -4,10 +4,10 @@ import com.google.gson.JsonObject;
 import com.google.gson.annotations.Expose;
 import lombok.Data;
 import lombok.NonNull;
-import net.minecraft.item.ItemStack;
-import net.minecraft.item.Items;
-import net.minecraft.potion.EffectInstance;
-import net.minecraft.potion.Effects;
+import net.minecraft.world.effect.MobEffectInstance;
+import net.minecraft.world.effect.MobEffects;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.Items;
 import xin.vanilla.mc.enums.ERewardType;
 import xin.vanilla.mc.rewards.Reward;
 import xin.vanilla.mc.rewards.RewardList;
@@ -19,7 +19,6 @@ import java.io.Serializable;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 @Data
 public class SignInData implements Serializable {
@@ -158,7 +157,7 @@ public class SignInData implements Serializable {
         // 处理映射关系
         this.continuousRewardsRelation = new LinkedHashMap<>();
         if (!continuousRewards.isEmpty()) {
-            List<Integer> keyList = continuousRewards.keySet().stream().map(Integer::parseInt).sorted().collect(Collectors.toList());
+            List<Integer> keyList = continuousRewards.keySet().stream().map(Integer::parseInt).sorted().toList();
             int max = keyList.stream().max(Comparator.naturalOrder()).orElse(0);
             int cur = keyList.get(0);
             for (int i = 1; i <= max; i++) {
@@ -188,7 +187,7 @@ public class SignInData implements Serializable {
         // 处理映射关系
         this.cycleRewardsRelation = new LinkedHashMap<>();
         if (!cycleRewards.isEmpty()) {
-            List<Integer> keyList = cycleRewards.keySet().stream().map(Integer::parseInt).sorted().collect(Collectors.toList());
+            List<Integer> keyList = cycleRewards.keySet().stream().map(Integer::parseInt).sorted().toList();
             int max = keyList.stream().max(Comparator.naturalOrder()).orElse(0);
             int cur = keyList.get(0);
             for (int i = 1; i <= max; i++) {
@@ -289,7 +288,7 @@ public class SignInData implements Serializable {
                     setType(ERewardType.SIGN_IN_CARD);
                 }});
             }});
-            setContinuousRewards(new LinkedHashMap<String, RewardList>() {{
+            setContinuousRewards(new LinkedHashMap<>() {{
                 put("1", new RewardList() {{
                     add(new Reward() {{
                         setContent(new ExpPointRewardParser().serialize(5));
@@ -298,7 +297,7 @@ public class SignInData implements Serializable {
                 }});
                 put("2", new RewardList() {{
                     add(new Reward() {{
-                        setContent(new EffectRewardParser().serialize(new EffectInstance(Effects.LUCK, 300, 1)));
+                        setContent(new EffectRewardParser().serialize(new MobEffectInstance(MobEffects.LUCK, 300, 1)));
                         setType(ERewardType.EFFECT);
                     }});
                 }});
@@ -315,7 +314,7 @@ public class SignInData implements Serializable {
                     }});
                 }});
             }});
-            setCycleRewards(new LinkedHashMap<String, RewardList>() {{
+            setCycleRewards(new LinkedHashMap<>() {{
                 put("1", new RewardList() {{
                     add(new Reward() {{
                         setContent(new ExpLevelRewardParser().serialize(1));
@@ -343,20 +342,20 @@ public class SignInData implements Serializable {
             }});
             setYearRewards(new LinkedHashMap<>());
             setMonthRewards(new LinkedHashMap<>());
-            setWeekRewards(new LinkedHashMap<String, RewardList>() {{
+            setWeekRewards(new LinkedHashMap<>() {{
                 put("6", new RewardList() {{
                     add(new Reward() {{
-                        setContent(new EffectRewardParser().serialize(new EffectInstance(Effects.LUCK, 6000, 1)));
+                        setContent(new EffectRewardParser().serialize(new MobEffectInstance(MobEffects.LUCK, 6000, 1)));
                         setType(ERewardType.EFFECT);
                     }});
                 }});
                 put("7", new RewardList() {{
                     add(new Reward() {{
-                        setContent(new EffectRewardParser().serialize(new EffectInstance(Effects.DIG_SPEED, 6000, 0)));
+                        setContent(new EffectRewardParser().serialize(new MobEffectInstance(MobEffects.DIG_SPEED, 6000, 0)));
                         setType(ERewardType.EFFECT);
                     }});
                     add(new Reward() {{
-                        setContent(new EffectRewardParser().serialize(new EffectInstance(Effects.JUMP, 6000, 0)));
+                        setContent(new EffectRewardParser().serialize(new MobEffectInstance(MobEffects.JUMP, 6000, 0)));
                         setType(ERewardType.EFFECT);
                     }});
                     add(new Reward() {{
@@ -365,14 +364,14 @@ public class SignInData implements Serializable {
                     }});
                 }});
             }});
-            setDateTimeRewards(new LinkedHashMap<String, RewardList>() {{
+            setDateTimeRewards(new LinkedHashMap<>() {{
                 put("0000-10-06~1", new RewardList() {{
                     add(new Reward() {{
                         setContent(new ItemRewardParser().serialize(new ItemStack(Items.EXPERIENCE_BOTTLE, 1)));
                         setType(ERewardType.ITEM);
                     }});
                     add(new Reward() {{
-                        setContent(new EffectRewardParser().serialize(new EffectInstance(Effects.DAMAGE_RESISTANCE, 1, 300)));
+                        setContent(new EffectRewardParser().serialize(new MobEffectInstance(MobEffects.DAMAGE_RESISTANCE, 1, 300)));
                         setType(ERewardType.EFFECT);
                     }});
                 }});
